Estilização das telas referentes a manuntenção, usuário e véiculo

--- a/app/views/manutencaos/edit.html.erb
+++ b/app/views/manutencaos/edit.html.erb
@@ -1,5 +1,12 @@
-<h1>Editando Manutenção</h1>
+<div class="jumbotron text-center">
+  <h1>Editar manuntenções</h1>
+  <p>Página para editar as informações de uma manutenção já existente</p>
+</div>
+<div class="container">
+  <div class="jumbotron">
 
 <%= render 'form', manutencao: @manutencao %>
 
 <%= link_to 'Voltar', manutencaos_path, class:"btn btn-default" %>
+  </div>
+</div>
