--- a/app/views/usuarios/new.html.erb
+++ b/app/views/usuarios/new.html.erb
@@ -1,4 +1,10 @@
-<h1>Novo Usuario</h1>
-
+<div class="jumbotron text-center">
+<h1>Cadastrar usuário</h1>
+  <p>Página para cadastrar um usuário ainda não existente</p>
+</div>
+<div class="container">
+  <div class="jumbotron">
 <%= render 'form', usuario: @usuario %>
 <%= link_to 'Voltar', usuarios_path, class: "btn btn-default" %>
+  </div>
+</div>
