--- a/app/views/veiculos/index.html.erb
+++ b/app/views/veiculos/index.html.erb
@@ -2,8 +2,8 @@
 <p id="notice"><%= notice %></p>
 
 <div class = "jumbotron text-center">
-  <h1>Veículos</h1>
-  <p>Página principal que lista por placa e gerencia os véiculos já cadastrados</p>
+  <h1>Veículos <%= image_tag("car.png", :alt => "bus",  height: 55, width: 55) %></h1>
+  <p>Página principal que lista por placa e gerencia as véiculos já cadastrados</p>
 </div>
 
 <div class="container">
