--- a/app/views/veiculos/new.html.erb
+++ b/app/views/veiculos/new.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-  <h1>Cadastrar novo veículo</h1>
+  <h1>Cadastrar veículo</h1>
   <p>Página para cadastrar um véiculo ainda não existente</p>
 </div>
 <div class="container">
