--- a/app/views/manutencaos/new.html.erb
+++ b/app/views/manutencaos/new.html.erb
@@ -1,5 +1,11 @@
-<h1>Nova Manutenção</h1>
-
+<div class="jumbotron text-center">
+  <h1>Agendar manutenção</h1>
+  <p>Página para agendar futuras manutenções para cada véiculo já existinte</p>
+</div>
+<div class="container">
+  <div class="jumbotron">
 <%= render 'form', manutencao: @manutencao %>
 
 <%= link_to 'Voltar', manutencaos_path, class:"btn btn-default" %>
+  </div>
+</div>
