--- a/app/views/usuarios/edit.html.erb
+++ b/app/views/usuarios/edit.html.erb
@@ -1,5 +1,12 @@
-<h1>Editando Usuario</h1>
+<div class="jumbotron text-center">
+  <h1>Editar usuários</h1>
+  <p>Página para editar as informações de um usuário já cadastrado</p>
+</div>
+<div class="container">
+  <div class="jumbotron">
 
 <%= render 'form', usuario: @usuario %>
 
 <%= link_to 'Voltar', usuarios_path, class: "btn btn-default" %>
+  </div>
+</div>
