--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -1,7 +1,10 @@
 <p id="notice"><%= notice %></p>
-<div class = "title-container">
-  <h1>Usuários</h1>
+<div class = "jumbotron text-center">
+  <h1>Usuários <%= image_tag("user.png", :alt => "bus",  height: 55, width: 55) %></h1>
+  <p1>Página principal que lista por nome e gerencia os usuários já cadastrados</p1>
 </div>
+<div class="container">
+  <div class="jumbotron">
   <ul>
     <%= form_tag usuarios_path, :method => 'get' do %>
       <%= text_field_tag :search, params[:search] %>
@@ -11,14 +14,14 @@
 
   <% @usuarios.each do |usuario| %>
     <ul>
-      <li>
         <%= link_to usuario.nome, usuario_path(usuario), class: "btn btn-default" %>
         <%= link_to "Remover", usuario, data: {:confirm => "Deseja remover o usuário?"}, :method => :delete, class: "btn btn-default" %>
-      </li>
     </ul>
   <% end %>
 <br>
 
-<p>
-  <%= link_to 'Novo Usuario', new_usuario_path, class: "btn btn-default" %><br />
-</p>
+<ul>
+  <%= link_to 'Novo usuário', new_usuario_path, class: "btn btn-default btn-lg" %><br />
+</ul>
+  </div>
+</div>
