Ajuste nas telas de viagem e motorista

--- a/app/views/motorista/edit.html.erb
+++ b/app/views/motorista/edit.html.erb
@@ -1,5 +1,11 @@
-<h1>Editando Motorista</h1>
-
+<div class="jumbotron text-center">
+  <h1>Editar motorista</h1>
+  <p>Página para editar as informações de um usuário já cadastrado</p>
+</div>
+<div class="container">
+  <div class="jumbotron">
 <%= render 'form', motorista: @motorista %>
 
 <%= link_to 'Voltar', motorista_index_path, class:"btn btn-default" %>
+  </div>
+</div>
