--- a/app/views/viagems/edit.html.erb
+++ b/app/views/viagems/edit.html.erb
@@ -1,5 +1,10 @@
-<h1>Editando Viagem</h1>
-
+<div class="jumbotron text-center">
+  <h1>Editar viagem</h1>
+  <p>Página para editar as informações de uma viagem já agendada</p>
+</div>
+<div class="container">
+  <div class="jumbotron">
 <%= render 'form', viagem: @viagem %>
-
 <%= link_to 'Voltar', viagems_path, class: "btn btn-default" %>
+  </div>
+</div>
