--- a/app/views/motorista/new.html.erb
+++ b/app/views/motorista/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Motorista</h1>
-
+<div class="jumbotron text-center">
+  <h1>Cadastrar motorista</h1>
+  <p>Página para cadastrar um motorista ainda não existente</p>
+</div>
+<div class="container">
+  <div class="jumbotron">
 <%= render 'form', motorista: @motorista %>
-
 <%= link_to 'Voltar', motorista_index_path, class:"btn btn-default" %>
+  </div>
+</div>
