Ajuste no nome das tabelas de manutenção

--- a/app/views/manutencaos/index.html.erb
+++ b/app/views/manutencaos/index.html.erb
@@ -25,7 +25,7 @@
 <br>
   <table class="table table-bordered">
   <tr>
-    <th bgcolor="#000000"><font color="#ffffff">Manutenção de óleo e filtro de óleo</font>/th>
+    <th bgcolor="#000000"><font color="#ffffff">Manutenção do óleo do motor e filtro de óleo</font></th>
 
   </tr>
 
@@ -36,7 +36,7 @@
         <% end %>
 
   <tr>
-    <th bgcolor="#000000"><font color="#ffffff">Manutenção de filtro de combustível e de ar</font></th>
+    <th bgcolor="#000000"><font color="#ffffff">Manutenção de filtro de combustível, filtro de ar e filtro de ar condiconado</font></th>
 
   </tr>
 
@@ -47,7 +47,7 @@
   <% end %>
 
   <tr>
-    <th bgcolor="#000000"><font color="#ffffff">Manutenção de correia dentada</font></th>
+    <th bgcolor="#000000"><font color="#ffffff">Manutenção de correia dentada e corrente comando</font></th>
 
   </tr>
 
@@ -58,7 +58,7 @@
   <% end %>
 
   <tr>
-    <th bgcolor="#000000"><font color="#ffffff">Manutenção de velas </font></th>
+    <th bgcolor="#000000"><font color="#ffffff">Manutenção de velas e cabos de velas</font></th>
 
   </tr>
 
