--- a/app/views/veiculos/index.html.erb
+++ b/app/views/veiculos/index.html.erb
@@ -21,8 +21,12 @@
 
 <div class='btn-group-vertical'>
   <% @veiculos.each do |veiculo| %>
-    <ul>
 
+    <ul>
+      <%if veiculo.alocado == TRUE%>
+        <%= image_tag("g.ico", :alt => "bus",  height: 13, width: 13) %></h1>
+        <%else %><%= image_tag("r.ico", :alt => "bus",  height: 13, width: 13) %></h1>
+      <% end %>
         <%= link_to veiculo.placa , veiculo_path(veiculo), class: "btn btn-default"%>
         <%= link_to "Remover", veiculo, data: {:confirm => "Deseja remover o veículo?"}, :method => :delete, class: "btn btn-default" %>
 
@@ -33,4 +37,6 @@
   <%= link_to 'Novo veículo', new_veiculo_path, class: "btn btn-default btn-lg" %><br />
   </ul>
 </div>
-  </div></div>
+  </div>
+</div>
+
