--- a/app/views/manutencaos/index.html.erb
+++ b/app/views/manutencaos/index.html.erb
@@ -19,7 +19,7 @@
     <ul>
 
         <%= link_to manutencao.descricao, manutencao_path(manutencao), class: "btn btn-default" %>
-        <%= link_to "Desagendar", manutencao, data: {:confirm => "Deseja realmente desagendar esta manutenção?"}, :method => :delete, class: "btn btn-default" %>
+        <%= link_to "Desagendar "+manutencao.descricao, manutencao, data: {:confirm => "Deseja realmente desagendar esta manutenção?"}, :method => :delete, class: "btn btn-default" %>
     </ul>
   <% end %>
 <br>
