--- a/app/views/veiculos/index.html.erb
+++ b/app/views/veiculos/index.html.erb
@@ -28,7 +28,7 @@
         <%else %><%= image_tag("r.ico", :alt => "bus",  height: 13, width: 13) %></h1>
       <% end %>
         <%= link_to veiculo.placa , veiculo_path(veiculo), class: "btn btn-default"%>
-        <%= link_to "Remover", veiculo, data: {:confirm => "Deseja remover o veículo?"}, :method => :delete, class: "btn btn-default" %>
+        <%= link_to "Remover "+veiculo.placa, veiculo, data: {:confirm => "Deseja remover o veículo?"}, :method => :delete, class: "btn btn-default" %>
 
     </ul>
   <% end %>
