adequacao de manutencao ao mvc

--- a/app/views/manutencaos/_form.html.erb
+++ b/app/views/manutencaos/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="field">
     <%= form.label :usuario_id %>
-    <%= form.collection_select(:usuario_id, Usuario.all, :id, :nome, prompt: true)%>
+    <%= form.collection_select(:usuario_id, @usuario, :id, :nome, prompt: true)%>
   </div>
 
   <div class="field">
     <%= form.label :veiculo_id %>
-    <%= form.collection_select(:veiculo_id, Veiculo.all, :id, :placa, prompt: true)%>
+    <%= form.collection_select(:veiculo_id, @veiculo, :id, :placa, prompt: true)%>
   </div>
 
   <div class="field">
