--- a/app/views/usuarios/show.html.erb
+++ b/app/views/usuarios/show.html.erb
@@ -35,6 +35,11 @@
   <%= @usuario.capacidadeDeGerencia %>
 </p>
 
+<p>
+  <strong>Ativo:</strong>
+  <%= @usuario.ativo %>
+</p>
+
 <%= link_to 'Editar', edit_usuario_path(@usuario), class: "btn btn-default" %>
 <%= link_to 'Voltar', usuarios_path, class: "btn btn-default" %>
 
