--- a/app/views/motorista/_form.html.erb
+++ b/app/views/motorista/_form.html.erb
@@ -36,6 +36,11 @@
     <%= form.text_field :telefone, id: :motorista_telefone %>
   </div>
 
+  <div class="field">
+    <%= form.label :ativo %>
+    <%= form.check_box :ativo, id: :motorista_ativo %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
