--- a/app/views/usuarios/_form.html.erb
+++ b/app/views/usuarios/_form.html.erb
@@ -41,6 +41,11 @@
     <%= form.check_box :capacidadeDeGerencia, id: :usuario_capacidadeDeGerencia %>
   </div>
 
+  <div class="field">
+    <%= form.label :ativo %>
+    <%= form.check_box :ativo, id: :usuario_ativo %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
