--- a/app/views/veiculos/_form.html.erb
+++ b/app/views/veiculos/_form.html.erb
@@ -47,6 +47,11 @@
     <%= form.check_box :alocado, id: :veiculo_alocado %>
   </div>
 
+  <div class="field">
+    <%= form.label :ativo %>
+    <%= form.check_box :ativo, id: :usuario_ativo %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
