Controlador de sessão e suas views, mudanças de atributos nos models, reajuste nos controladores e nas views dos mesmos, feature de viagem, gema bcrypt no gemfile

--- a/app/views/veiculos/index.html.erb
+++ b/app/views/veiculos/index.html.erb
@@ -23,7 +23,7 @@
   <% @veiculos.each do |veiculo| %>
 
     <ul>
-      <%if veiculo.alocado == TRUE%>
+      <%if veiculo.ativo == TRUE%>
         <%= image_tag("g.ico", :alt => "bus",  height: 13, width: 13) %></h1>
         <%else %><%= image_tag("r.ico", :alt => "bus",  height: 13, width: 13) %></h1>
       <% end %>
