--- a/app/views/viagems/show.html.erb
+++ b/app/views/viagems/show.html.erb
@@ -70,7 +70,11 @@
   <%= @viagem.destino %>
 </p>
 
-<%= link_to 'Já realizada', viagems_path, class: "btn btn-default ", :onclick => @viagem.confirmarRealizacao %>
+<p>
+  <strong>Realizada:</strong>
+  <%= @viagem.realizada %>
+</p>
+
 <%= link_to 'Editar', edit_viagem_path(@viagem), class:"btn btn-default" %> |
 <%= link_to 'Voltar', viagems_path, class:"btn btn-default" %>
 
