--- a/app/views/motorista/index.html.erb
+++ b/app/views/motorista/index.html.erb
@@ -14,10 +14,12 @@
 
   <% @motorista.each do |motorista| %>
     <ul>
-      <li>
+        <%if motorista.ativo == TRUE%>
+          <%= image_tag("g.ico", :alt => "bus",  height: 13, width: 13) %></h1>
+          <%else %><%= image_tag("r.ico", :alt => "bus",  height: 13, width: 13) %></h1>
+        <% end %>
         <%= link_to motorista.nome, motorista_path(motorista), class: "btn btn-default" %>
         <%= link_to "Remover "+motorista.nome, motorista, data: {:confirm => "Deseja remover o usuário?"}, :method => :delete, class: "btn btn-default" %>
-      </li>
     </ul>
   <% end %>
 <br>
