--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -14,6 +14,10 @@
 
   <% @usuarios.each do |usuario| %>
     <ul>
+        <%if usuario.ativo == TRUE%>
+          <%= image_tag("g.ico", :alt => "bus",  height: 13, width: 13) %></h1>
+          <%else %><%= image_tag("r.ico", :alt => "bus",  height: 13, width: 13) %></h1>
+        <% end %>
         <%= link_to usuario.nome, usuario_path(usuario), class: "btn btn-default" %>
         <%= link_to "Remover "+usuario.nome, usuario, data: {:confirm => "Deseja remover o usuário?"}, :method => :delete, class: "btn btn-default" %>
     </ul>
