--- a/app/views/viagems/index.html.erb
+++ b/app/views/viagems/index.html.erb
@@ -18,6 +18,10 @@
 
 <% @viagems.each do |viagem| %>
   <ul>
+      <%if viagem.realizada == TRUE%>
+        <%= image_tag("g.ico", :alt => "bus",  height: 13, width: 13) %></h1>
+        <%else %><%= image_tag("r.ico", :alt => "bus",  height: 13, width: 13) %></h1>
+      <% end %>
       <%= link_to viagem.destino, viagem_path(viagem), class: "btn btn-default" %>
       <%= link_to "Desagendar "+viagem.destino, viagem, data: {:confirm => "Deseja desagendar a viagem?"}, :method => :delete, class: "btn btn-default" %>
   </ul>
