--- a/app/views/manutencaos/show.html.erb
+++ b/app/views/manutencaos/show.html.erb
@@ -1,3 +1,6 @@
+<%if current_user.capacidadeDeGerencia == TRUE %>
+
+
 <p id="notice"><%= notice %></p>
 <div class = "jumbotron text-center">
   <h1>Informações da manuntenção</h1>
@@ -41,3 +44,5 @@
 <%= link_to 'Voltar', manutencaos_path, class:"btn btn-default"  %>
   </div>
 </div>
+
+<% end %>
