--- a/app/views/veiculos/edit.html.erb
+++ b/app/views/veiculos/edit.html.erb
@@ -1,4 +1,6 @@
-<div class="jumbotron text-center">
+<%if current_user.capacidadeDeGerencia == TRUE %>
+
+  <div class="jumbotron text-center">
   <h1>Editar veículo</h1>
   <p>Página para editar as informações de um véiculo já cadastrado</p>
 </div>
@@ -9,3 +11,5 @@
 <%= link_to 'Voltar', veiculos_path, class:"btn btn-default" %>
   </div>
 </div>
+
+<% end %>
