--- a/app/views/veiculos/new.html.erb
+++ b/app/views/veiculos/new.html.erb
@@ -1,4 +1,6 @@
-<div class="jumbotron text-center">
+<%if current_user.capacidadeDeGerencia == TRUE %>
+
+  <div class="jumbotron text-center">
   <h1>Cadastrar veículo</h1>
   <p>Página para cadastrar um véiculo ainda não existente</p>
 </div>
@@ -9,3 +11,5 @@
 <%= link_to 'Voltar', veiculos_path, class: "btn btn-default" %>
   </div>
 </div>
+
+<% end %>
