--- a/app/views/veiculos/show.html.erb
+++ b/app/views/veiculos/show.html.erb
@@ -1,3 +1,6 @@
+
+<%if current_user.capacidadeDeGerencia == TRUE %>
+
 <p id="notice"><%= notice %></p>
 <div class = "jumbotron text-center">
   <h1>Informações do véiculo</h1>
@@ -39,3 +42,5 @@
 <%= link_to 'Voltar', veiculos_path, class: "btn btn-default"%>
 </div>
 </div>
+
+<% end %>
