--- a/app/views/veiculos/show.html.erb
+++ b/app/views/veiculos/show.html.erb
@@ -31,6 +31,11 @@
 </p>
 
 <p>
+  <strong>Manutenção em dia:</strong>
+  <%= @veiculo.manutencaoEmDia %>
+</p>
+
+<p>
   <strong>Ativo:</strong>
   <%= @veiculo.ativo %>
 </p>
